# microbit2-demo-rs

./: Cargo.toml  LICENSE  rust-toolchain.toml
.cargo/: config.toml
lib/microbit2_demolib/: Cargo.toml
lib/microbit2_demolib/src/: button.rs  font5x5.rs  lib.rs
src/: main.rs
